# crypto-dashboard

./: .gitignore  README.md  docker-compose.yaml  hello.py  main.py  pyproject.toml
app/: __init__.py  crypto.py  routes.py
backend/: Dockerfile  pyproject.toml
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: CryptoCard.js  Dashboard.js
