[project]
name = "flask-crypto-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-socketio>=5.4.1",
    "flask>=3.1.0",
    "npm>=0.1.1",
    "requests>=2.32.3",
    "flask-caching>=2.3.0",
    "flask-cors>=5.0.0",
    "gunicorn>=23.0.0",
]
